--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postcss": "^8.4.40",
     "react": "^18.3.1",
     "react-awesome-reveal": "^4.2.13",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-modal-sheet": "^3.1.0",
