--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-awesome-reveal": "^4.2.13",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.2.1",
     "react-modal-sheet": "^3.1.0",
     "react-multi-carousel": "^2.8.5",
@@ -30,12 +31,14 @@
     "react-spinners": "^0.14.1",
     "react-spring-bottom-sheet": "^3.4.1",
     "react-type-animation": "^3.2.0",
+    "sooner": "^1.1.4",
+    "swiper": "^11.1.15",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": " react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -57,6 +60,7 @@
     ]
   },
   "devDependencies": {
+    "jest": "^27.5.1",
     "tailwindcss": "^3.4.7"
   }
 }
